# jobs-bundle

./: README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
src/jobsbundle/: JobsBundle.py  JobsBundleTest.py  containerInit.py
src/jobsbundle/_config/: config.yaml  config_test.yaml
src/jobsbundle/git/: CurrentBranchResolver.py  CurrentRepositoryFactory.py
src/jobsbundle/job/: JobCreateOrUpdateCommand.py  JobCreatorCommand.py  JobIdFinder.py  JobPermissionUpdater.py  StreamingJobCreateOrUpdateCommand.py  ValuesFiller.py  fillTemplate.py
